global.css
/* ... */
.toast-icon-success {
  color:var(--text-success);
}
.toast-icon-error {
  color: var(--text-error);
}
.toast-icon-warning {
  color: var(--text-warning);
}

/* Messages*/ 

/*Footer page */ 

#company-info-wrapper {
background-color: white;
border-radius: 0.3rem;
padding: 1rem;
display: flex;
flex-direction: column
}
.question {
  font-weight: 700;
  margin-bottom: 1rem;
}
.margin-bottom {
  margin-bottom: 2rem;
}
.margin-block {
  margin-block: 2rem;
}
#kaleido-logo {
  width: 200px;
  width: 200px;
  margin: 0 auto;
}
/* loading spinner */
.spinner{
  border: 4px solid var(--main-color);
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border-left-color: transparent;
  animation: spin 1s ease-in-out infinite;
  position:fixed;
  top: 50%;
  left: 50%;
  z-index: 999999;
  margin-bottom: 3rem;
}

@keyframes spin {
0% {
  transform: translate(-50%, -50%) rotate(0deg);
}100%{
  transform: translate(-50%, -50%) rotate(360deg);
}
} 
/* loading spinner */
/*Footer page */ 

@media (min-width: 768px) {
  h1 {
    font-size: 1.5rem;
    
  }
  h2, legend {
    font-size: 1.5rem;
  }
  h3 {
    font-size: 1.2rem;
  }
  
  p {
    font-size: 1rem;
  }
  .grid {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 3rem;
  }
ul.breadcrumbs li {
  font-size: 1.2rem;
}
#company-info-wrapper {
padding: 3rem;
}
#hero-image-text {
  font-weight: 600; 
  font-size: 2rem;
}
section {
  width: 100%;
  margin: 0 auto;
  padding: 0;
  display: block;
}
#kaleido-logo {
  width: 300px;
  width: 300px;

}
#hero-image {
  height: 400px;
}
.pagination {
display: grid;
grid-template-columns: 40px 1fr 40px;
grid-template-rows: auto;
gap: 1rem;
  margin: 0 auto;
}

#carousel-wrapper {
  grid-column: span 1;
}
#prev-button {
  order: 1;
  height:auto;
}
.carousel-wrapper {
  order: 2;
}
#next-button {
  order: 3;
  height:auto;
}
  /* HEADER */
  #logo {
    width: clamp(90px, 70vw, 160px);
  }
  .user,
  .shoppingcart {
    width: 25px;
    height: 25px;
  }

  .user-shoppingcart-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 8rem;
  }
  .hamburger-menu {
    display: none;
  }

  /*FOOTER*/

  .footer-navigation-wrapper {
    display: flex;
    flex-direction: row;
    gap: 5rem;
  }
  #footer {
    flex-direction: row;
    justify-content: center;
    gap: 10rem;
  }
  #products-wrapper {
    grid-template-columns: 1fr 1fr;
    gap: 3rem;
  }

  main {
    margin-inline: 10rem;
  }
  .padding {
    padding-bottom: 1rem;
  }
  .margin {
    margin: 1rem;
  }
  #carousel-wrapper {
  grid-template-columns: 1fr 1fr 1fr;
}
#highest-reviewed-products {
  font-size: 1.6rem;
}
.sale {
  font-size: 1rem;
  font-weight: 600;
}
.strike {
  text-decoration: line-through;
  font-size: 1rem;
}
.price {
  font-weight: 600;
  font-size: 1rem;
}
.price-wrapper {
  flex-direction: row;
  gap: 1rem;
}

}

@media (min-width: 1440px) {
  #products-wrapper {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 2rem;
  }
    #our-products {
  grid-column: span 3;
}
  main {
    margin-inline: 15rem;
  }
  #hero-image {
  height: 800px;
}
#hero-image-text {
  font-weight: 800; 
  font-size: 3rem;
}
}
@media (min-width: 1920px) {
  #products-wrapper {
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 3rem;
  }
      #our-products {
  grid-column: span 4;
}
    main {
    margin-inline: 15rem;
  }
    h1 {
    font-size: 1.8rem;
    
  }
    h2, legend {
    font-size: 1.6rem;
  }
  h3 {
    font-size: 1.5rem;
  }
  
  p {
    font-size: 1.2rem;
  }
}

